samples/_failures_safe/1761092505_c0b14f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be03ec73.c: In function ‘main’:
./samples/SAFE/__tmp_be03ec73.c:155:9: error: expected expression at end of input
  155 |         if (sscanf(buffer, "%d %d %d", &src, &dest, &weight) != 3)
      |         ^~
./samples/SAFE/__tmp_be03ec73.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be03ec73.c:155:9: error: expected declaration or statement at end of input
